fix vertical alignment issue with titles

--- a/style.less
+++ b/style.less
@@ -546,8 +546,12 @@ object {
 	}
 	.entry-title {
 		font-size: 72px;
-		line-height:1em;
 		margin-top:0;
+	}
+	.single {
+		.entry-title {
+			line-height: 1em;
+		}
 	}
 	#content .nav-previous {
 		float: left;
